Fixed NBUCurrencyService